--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,3 +15,16 @@ import Button from './Button.astro';
         </div>
     </div>
 </div>
+
+<style lang="scss">
+    .hero {
+        padding: 88px 0 44px;
+
+        &__title {
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: normal;
+        }
+    }
+</style>
