--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@
 import Description from '../components/Description.astro';
 import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
+import Footer from '../components/Footer.astro';
 import News from '../components/News.astro';
 import Join from '../components/Join.astro';
 import Participants from '../components/Participants.astro';
@@ -26,4 +27,5 @@ import Layout from '../layouts/Layout.astro';
 	<Join/>
 
 	<Description title="Mediju pārstāvjiem" desc=`<p><a href="#" title="Iet uz kontaktu mediju saiti" target="_blank" rel="noopener noreferrer">Kontaktu medijiem</a></p><p><a href="#" title="Iet uz preses relīzēm" target="_blank" rel="noopener noreferrer">Preses relīzes</a></p><p><a href="#" title="Atvērt prototipu ekrānšāviņus" target="_blank" rel="noopener noreferrer">Prototipu ekrānšāviņi</a></p>`/>
+	<Footer/>
 </Layout>
