--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -15,7 +15,27 @@ const { title, classList, action } = Astro.props;
 
 <style lang="scss">
     .button {
-        background-color: transparent;
+        padding: 12px 24px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--background-dark);
         border: none;
+        color: var(--text-secondary);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px; 
+        cursor: pointer;
+        outline: none;
+        transition: all 0.1s ease-in;
+
+        &:hover {
+            background-color: var(--layer-01-dark);
+        }
+
+        &:focus-visible {
+            box-shadow: inset 0 0 0 2px var(--background-dark), inset 0 0 0 4px var(--layer-01-light);
+        }
     }
 </style>
