--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,20 +12,66 @@
 	</body>
 </html>
 
-<style>
+<style is:global>
+	/* global styling */
+	:root {
+		--background-light: #F7F3F2;
+		--primary: #913A9C;
+		--border-subtle-01-light: #E5E0DF;
+		--layer-01-light: #FFFFFF;
+		--btn-secondary: #413143;
+
+		--background-dark: #171414;
+		--border-subtle-01-dark: #393939;
+		--layer-01-dark: #272525;
+		--text-secondary: #C6C6C6;
+	}
+	/* reset */
+	p {
+		padding: 0;
+	}
+	ul {
+		list-style-type: none;
+	}
+	a {
+		text-decoration: none;
+	}
+
 	html,
 	body {
+		padding: 0;
 		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-	astro-dev-toolbar {
- 		display: none !important;
+		color: var(--text-primary);
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 24px; 
 	}
 
 	.wrap {
-		@media (min-width: 768px) {
-			
+		margin: 0 auto;
+		max-width: 94%;
+		
+		@media (min-width: 1024px) {
+			padding: 0 24px;
+			max-width: 960px;
 		}
+	}
+
+	.link {
+		color: var(--primary);
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 24px;
+		letter-spacing: 0.16px;
+
+		&--underline {
+			text-decoration: underline;
+		}
+	}
+
+	.text {
+
 	}
 </style>
