--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,11 +6,12 @@ import Button from './Button.astro';
     <div class="wrap">
         <div class="hero__content">
             <h2 class="hero__title">Jaunā E‑veselības iedzīvotāju portāla <strong>prototips</strong></h2>
-            <Button classList="button--purple" title="Skatīt prototipu" action={()=>{console.log('test')}}/>
-            <div class="hero__desc">
+            <div class="hero__button">
+                <Button label="Skatīt prototipu" classList="button--purple" title="Skatīt prototipu" link="#prototips"/>
+            </div>
+            <div class="hero__desc text">
                 <p>Projekts paredz jaunās paaudzes iedzīvotāju E-veselības portāla prototipa izveidi. Prototips – portāla vīzijas modelis.</p>
                 <p>Prototips tiks izmantots jauna <a href="http://www.eveseliba.gov.lv" title="Iet uz eveseliba.gov.lv portālu" target="_blank" rel="noopener noreferrer">www.eveseliba.gov.lv</a> portāla izveidē, lai tas būtu mūsdienīgs, ērts lietošanā, piedāvātu jaunus pakalpojumus un atbilstu iedzīvotāju vajadzībām.</p>
-                <p>Pirms sāc testēt prototipu un klikšķināt tā sadaļas, uzzini, kas jāņem vērā.</p>
             </div>
         </div>
     </div>
@@ -20,11 +21,24 @@ import Button from './Button.astro';
     .hero {
         padding: 88px 0 44px;
 
+        &__content {
+            max-width: 540px;
+        }
+
         &__title {
+            max-width: 360px;
             font-size: 40px;
             font-style: normal;
             font-weight: 300;
             line-height: normal;
+
+            strong {
+                font-weight: 600;
+            }
+        }
+
+        &__button {
+            margin: 40px 0;
         }
     }
 </style>
