--- a/src/components/Insight.astro
+++ b/src/components/Insight.astro
@@ -12,3 +12,10 @@ import Button from "./Button.astro"
         </div>
     </div>
 </div>
+
+<style lang="scss">
+    .insight {
+        padding: 72px 0 0;
+        background-color: var(--background-light);
+    }
+</style>
